istio/prod/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingress
  namespace: istio-system
  annotations:
    external-dns.alpha.kubernetes.io/hostname: grafana.prod.iqbalhakim.ink,argo.prod.iqbalhakim.ink,app.iqbalhakim.ink,api.iqbalhakim.ink,iqbalhakim.ink,litmus.prod.iqbalhakim.ink
    tailscale.com/hostname: "iqbalhakim-ingress"
