istio/prod/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingress-gateway
  namespace: istio-system
spec:
  selector:
    app: istio-ingress
    istio: ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.prod.iqbalhakim.ink
        - argo.prod.iqbalhakim.ink
        - app.iqbalhakim.ink
        - api.iqbalhakim.ink
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - grafana.prod.iqbalhakim.ink
        - argo.prod.iqbalhakim.ink
        - app.iqbalhakim.ink
        - api.iqbalhakim.ink
      tls:
        mode: SIMPLE
        credentialName: iqbalhakim-prod-tls
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend
  namespace: apps
spec:
  hosts:
    - app.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: frontend.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend
  namespace: apps
spec:
  hosts:
    - api.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: backend.apps.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  hosts:
    - grafana.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
    - argo.prod.iqbalhakim.ink
  gateways:
    - istio-system/istio-ingress-gateway
  http:
    - route:
        - destination:
            host: argocd-server.argocd.svc.cluster.local
            port:
              number: 80
